deploy/services/res-dispatcher/res-dispatcher-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-manager-service
  namespace: ingos-system
spec:
  selector:
    app: app-manager-deployment
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: app-manager-deployment
    protocol: TCP
    port: 5000
    targetPort: 5000
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    nodePort: 5000
