deploy/services/res-dispatcher/res-dispatcher-ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-manager-ingress
  namespace: ingos-system
spec:
  rules:
  - host: app-manager.ingos.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-manager-service
            port:
              number: 80
